The trace event vm/class/load is not always being sent

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • b131

      The trace event vm/class/load is not sent for classes that are loaded via JVM_DefineClass or JVM_DefineClassWithSource. An event is sent, but only for the resolved super class when parsing the class file. The event for the class being defined is never sent.

        1. ByteCodeLoader.java
          3 kB
          Erik Helin
        2. InMemoryJavaCompiler.java
          6 kB
          Erik Helin
        3. Reproducer.java
          2 kB
          Erik Helin
        4. reproducer.sh
          0.7 kB
          Erik Helin
        5. inspect.sh
          0.7 kB
          Erik Helin

            Assignee:
            Max Ockner (Inactive)
            Reporter:
            Erik Helin
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: