8038332: The trace event vm/class/load is not always being sent

Added trace event vm/class/define

Reviewed-by: coleenp, egahlin, acorn